[package]
name = "tower"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
image = "0.22.3"
cgmath = "0.17.0"
uuid = "0.7.0"
structopt = { version = "0.3.5", default_features = false, features = ["color", "wrap_help", "doc"] }
[dependencies.amethyst]
version = "0.13"
features = ["vulkan"]
