[package]
name = "tower"
version = "0.1.0"
authors = ["Colob"]
edition = "2018"
license = "Apache-2.0 OR MIT"
description = "Tower is a simple viewer made for cg animation and vfx, with some new concepts."

[dependencies]
image = "0.22.3"
cgmath = "0.17.0"
uuid = "0.7.0"
log = "0.4.8"
chrono = "0.4.10"
env_logger = "0.7.1"
structopt = { version = "0.3.5", default_features = false, features = ["color", "wrap_help", "doc"] }

[dependencies.amethyst-imgui]
version = "0.6.0"

[dependencies.amethyst]
version = "0.13"
features = ["vulkan"]

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
tower = { path = "/usr/bin/tower" }
