[package]
name = "tower"
version = "0.0.1"
authors = ["Colone"]
edition = "2018"
license = "AGPL"
description = "Tower View is a multi image viewer made with rust and powered by Amethyst."

[dependencies]
image = "0.22.3"
cgmath = "0.17.0"
uuid = "0.7.0"
log = "0.4.8"
chrono = "0.4.10"
env_logger = "0.7.1"
structopt = { version = "0.3.5", default_features = false, features = ["color", "wrap_help", "doc"] }
geo = "0.12.2"

[dependencies.amethyst-imgui]
version = "0.6.0"

[dependencies.amethyst]
version = "0.13"
features = ["vulkan"]


[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
tower = { path = "/usr/bin/tower" }
